--- a/CryptoTrack/Views/User/Create.cshtml
+++ b/CryptoTrack/Views/User/Create.cshtml
@@ -4,15 +4,9 @@
 }
 
 <div>
-    <h3>Fill in the following form</h3>
+    <h3>To Sign-Up fill following fields</h3>
 </div>
 <form method="post" style="margin: 5% 0 0" class="form-horizontal">
-    <div class="form-group">
-        <label class="control-label col-sm-2" for="id">Client ID:</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" placeholder="Enter Client ID" name="id">
-        </div>
-    </div>
     <div class="form-group">
         <label class="control-label col-sm-2" for="name">Name:</label>
         <div class="col-sm-10">
@@ -20,16 +14,15 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-sm-2" for="address">Address:</label>
+        <label class="control-label col-sm-2" for="pwd1">Password:</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" placeholder="Enter Address" name="address">
+            <input type="password" class="form-control" placeholder="Enter Password" name="pwd1">
         </div>
     </div>
     <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <div class="checkbox">
-                <label><input type="checkbox" name="trusted"> Trusted</label>
-            </div>
+        <label class="control-label col-sm-2" for="pwd2">Confirm:</label>
+        <div class="col-sm-10">
+            <input type="password" class="form-control" placeholder="Retype Password" name="pwd2">
         </div>
     </div>
     <div class="form-group">
