--- a/CryptoTrack/Views/Shared/_Layout.cshtml
+++ b/CryptoTrack/Views/Shared/_Layout.cshtml
@@ -20,11 +20,31 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @*@<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
-                    @*@<li>@Html.ActionLink("About", "About", "Home")</li>*@
-                    @*@<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
-                    <li>@Html.ActionLink("Sign-up / in", "Create", "User")</li>
+                    <li>@Html.ActionLink("Sign-up", "Create", "User")</li>
                 </ul>
+                <!--
+                <form class="navbar-form navbar-right" method="post">
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="username" placeholder="Username">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="password" placeholder="Password" style="line-height:">
+                    </div>
+                    <button type="submit" value="login" class="btn btn-default">Sign In</button>
+                </form>
+                    -->
+                @using (Html.BeginForm("Login", "Login",
+                        new { ReturnUrl = ViewBag.ReturnUrl },
+                        FormMethod.Post, new { @class = "navbar-form navbar-right" }))
+                {
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="username" placeholder="Username">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="password" placeholder="Password" style="line-height:">
+                    </div>
+                    <button type="submit" value="login" class="btn btn-default">Sign In</button>
+                }
             </div>
         </div>
     </div>
