--- a/CryptoTrack/Views/Shared/_LayoutLogin.cshtml
+++ b/CryptoTrack/Views/Shared/_LayoutLogin.cshtml
@@ -22,17 +22,11 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Sign-up", "Create", "User")</li>
                 </ul>
-                @using (Html.BeginForm("Login", "Login",
+                @using (Html.BeginForm("Logout", "Logout",
                         new { ReturnUrl = ViewBag.ReturnUrl },
                         FormMethod.Post, new { @class = "navbar-form navbar-right" }))
                 {
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="username" placeholder="Username">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control" name="password" placeholder="Password" style="line-height:">
-                    </div>
-                    <button type="submit" value="login" class="btn btn-default">Sign In</button>
+                    <button type="submit" value="logout" class="btn btn-default">Log out</button>
                 }
             </div>
         </div>
